--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  padding: 50px;
 }
 
 .App-logo {
@@ -13,15 +13,15 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.images-view {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.image-view {
+  width: 200px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
